@@ -37,6 +37,8 @@ function IdPSelectUIParms(){
         'fatal.noXMLHttpRequest': 'Browser does not support XMLHttpRequest, unable to load IdP selection data',
         'fatal.wrongProtocol' : 'Policy supplied to DS was not "urn:oasis:names:tc:SAML:profiles:SSO:idpdiscovery-protocol:single"',
         'fatal.wrongEntityId' : 'entityId supplied by SP did not match configuration',
+        'fatal.noData' : 'Metadata download returned no data',
+        'fatal.loadFailed': 'Failed to download metadata from ',
         'fatal.noparms' : 'No parameters to discovery session and no defaultReturn parameter configured',
         'fatal.noReturnURL' : "No URL return parameter provided",
         'fatal.badProtocol' : "Return request must start with https:// or http://",
@@ -56,7 +58,8 @@ function IdPSelectUIParms(){
         'fatal.divMissing': 'Das notwendige Div Element fehlt',
         'fatal.noXMLHttpRequest': 'Ihr Webbrowser unterst\u00fctzt keine XMLHttpRequests, IdP-Auswahl kann nicht geladen werden',
         'fatal.wrongProtocol' : 'DS bekam eine andere Policy als "urn:oasis:names:tc:SAML:profiles:SSO:idpdiscovery-protocol:single"',
-        'fatal.wrongEntityId' : 'Die entityId ist nicht korrekt"',
+        'fatal.wrongEntityId' : 'Die entityId ist nicht korrekt',
+        'fatal.loadFailed': 'Metadaten konnten nicht heruntergeladen werden: ',
         'fatal.noparms' : 'Parameter f\u00fcr das Discovery Service oder \'defaultReturn\' fehlen',
         'fatal.noReturnURL' : "URL return Parmeter fehlt",
         'fatal.badProtocol' : "return Request muss mit https:// oder http:// beginnen",
